# spacemouse_panda_controller

./: .gitignore  CMakeLists.txt  MUJOCO_LOG.TXT  README.md
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.fish  local_setup.sh  setup.fish  setup.sh
catkin_ws/devel/lib/franka_spacemouse/: spacemouse_node
catkin_ws/devel/lib/pkgconfig/: franka_spacemouse.pc  panda_arm_controller.pc
catkin_ws/devel/share/franka_spacemouse/cmake/: franka_spacemouseConfig.cmake
catkin_ws/devel/share/panda_arm_controller/cmake/: panda_arm_controllerConfig.cmake
catkin_ws/src/franka_spacemouse/: CMakeLists.txt  package.xml
catkin_ws/src/franka_spacemouse/src/: spacemouse.cpp  spacemouse_node.cpp
catkin_ws/src/panda_arm_controller/: CMakeLists.txt  franka_arm_controllers_plugin.xml  package.xml  panda_arm_controllers_plugin.xml
catkin_ws/src/panda_arm_controller/config/: controllers.yaml
catkin_ws/src/panda_arm_controller/include/panda_arm_controller/: joint_impedance_ik_controller.h
catkin_ws/src/panda_arm_controller/launch/: launch.xml  remarks.txt  spacemouse_teleop.launch
catkin_ws/src/panda_arm_controller/src/: joint_impedance_ik_controller.cpp  testikcontroller.cpp
franka_arm_controller/: CMakeLists.txt  package.xml
include/SpacemouseArmController/: shared_state.h
include/libfranka/: mobile_model.h  model.h  robot.h
include/libfranka/async_control/: async_position_control_handler.hpp
python/: ik_mujoco_controller.py  joint-controller-wtoggle.py  physical_arm_control.py  pyspace.py
python/assets/franka_arm/: mjx_single_cube.xml
scripts/: arm_ctrl.cpp  compile.bat  dls_algorithm.py  examples_common.cpp  examples_common.h  main.cpp  physical_arm_control.py  pyspace.py  robot_state_test  rostorobot.py  rostorobot_py.py  shared_state.cpp  spacemouse.cpp  spacemouse_arm_control.cpp  spacemouse_teleop  spacemouse_test.py  test_spacemouse_reading.cpp
scripts/archive/: dls_algorithm.py
src/: arm_ctrl.cpp  control_main.cpp  control_read_main.cpp  examples_common.cpp  main.cpp  print_state.cpp  shared_state.cpp  spacemouse.cpp  spacemouse_test_only.cpp  test_spacemouse_reading.cpp
