<?xml version="1.0"?>
<package format="2">
  <name>franka_arm_controllers</name>
  <version>0.1.0</version>
  <description>
    ROS1 port of frankaspacemouse, a set of ros_control controllers
    driven by SpaceMouse teleop input, for Franka arms via ros_control.
  </description>
  <maintainer email="dengd@wustl.edu">dmdeng1150</maintainer> <!-- apparently this is needed? idk lmao-->
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend> <!-- amentcmake to catkin for ROS1-->

  <!-- Core ros_control / controller plugin infrastructure -->
  <depend>roscpp</depend>
  <depend>controller_interface</depd>
  <depend>pluginlib</depend>end>
  <depend>hardware_interface</depen
  <depend>realtime_tools</depend>

  <!-- Franka-specific hardware interfaces (model, state, gripper) -->
  <depend>franka_hw</depend>
  <depend>franka_msgs</depend>
  <depend>franka_gripper</depend>

  <!-- Kinematics: URDF parsing + KDL chain/IK solvers -->
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>

  <!-- Math / transforms -->
  <depend>eigen_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Messages used by the SpaceMouse input topic -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Dynamic reconfigure for live gain tuning -->
  <depend>dynamic_reconfigure</depend>

  <export>
    <controller_interface plugin="${prefix}/franka_arm_controllers_plugin.xml" />
  </export>
</package>